--- a/app/assets/stylesheets/customer/form.scss
+++ b/app/assets/stylesheets/customer/form.scss
@@ -86,7 +86,7 @@ div#wrapper {
             color: $red;
           }
 
-          input {
+          input, textarea {
             background: $pink;
           }
         }
