--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -10,4 +10,5 @@
     end
   %>
   <%= link_to "アカウント", :customer_account if current_cutomer %>
+  <%= link_to "問い合わせ", :new_customer_account if current_cutomer %>
 </header>
